# faster-lio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.MD  package.xml
app/: CMakeLists.txt  run_mapping_offline.cc  run_mapping_online.cc
cmake/: packages.cmake
config/: hesai.yaml  horizon.yaml  livox.yaml  mid360.yaml  ouster64.yaml  robosense.yaml  velodyne.yaml  velodyne_utbm.yaml
config/rviz/: faster_lio.rviz
docker/: .env  Dockerfile  condarc  docker-compose.yml  ros_entrypoint.sh
include/: common_lib.h  imu_processing.hpp  laser_mapping.h  options.h  pointcloud_preprocess.h  use-ikfom.hpp  utils.h
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM_toolkit/mtk/src/: vectview.hpp
include/IKFoM_toolkit/mtk/types/: S2.hpp  vect.hpp  wrapped_cv_mat.hpp
include/ivox3d/: eigen_types.h  hilbert.hpp  ivox3d.h  ivox3d_node.hpp
launch/: evitado.launch  gdb_debug_example.launch  mapping_avia.launch  mapping_hesai.launch  mapping_horizon.launch  mapping_livox.launch  mapping_mid360.launch  mapping_ouster64.launch  mapping_robosense.launch  mapping_velodyne.launch  mapping_velodyne_liosam.launch  mapping_velodyne_ulhk.launch  mapping_velodyne_utbm.launch
result/: plot_bar_time_by_step.py  plot_process_recall.py  plot_time.py  plot_time_usage.py  rpe_odom.py
rviz_cfg/: loam_livox.rviz
scripts/: faster_lio.zsh
src/: CMakeLists.txt  laser_mapping.cc  pointcloud_preprocess.cc
src/faster_lio/: CMakeLists.txt  package.xml
src/faster_lio/app/: run_mapping_offline.cc  run_mapping_online.cc
src/faster_lio/cmake/: packages.cmake
src/faster_lio/config/: avia.yaml  jt16.yaml  ouster64.yaml  velodyne_liosam.yaml  velodyne_ulhk.yaml
src/faster_lio/include/: common_lib.h  imu_processing.hpp  laser_mapping.h  pointcloud_preprocess.h  so3_math.h
src/faster_lio/include/IKFoM_toolkit/esekfom/: esekfom.hpp  util.hpp
src/faster_lio/include/IKFoM_toolkit/mtk/: build_manifold.hpp  startIdx.hpp
src/faster_lio/include/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp
src/faster_lio/include/IKFoM_toolkit/mtk/types/: SOn.hpp
src/faster_lio/include/ivox3d/: eigen_types.h  ivox3d.h  ivox3d_node.hpp
src/faster_lio/launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_avia.launch.py  mapping_horizon.launch  mapping_jt16.launch.py  mapping_ouster64.launch  mapping_velodyne.launch  mapping_velodyne_liosam.launch  mapping_velodyne_ulhk.launch
src/faster_lio/result/: kdtree.ivox.xlsx  plot_nn.py
src/faster_lio/rviz_cfg/: loam_livox.rviz
src/faster_lio/src/: CMakeLists.txt  laser_mapping.cc  options.cc  pointcloud_preprocess.cc  utils.cc
src/faster_lio_interfaces/: CMakeLists.txt  package.xml
src/faster_lio_interfaces/msg/: CustomMsg.msg
